微信小程序前端添加了推荐页面的轮播和点击一级菜单时隐藏推荐

--- a/souceCode/RSS_Front/project.config.json
+++ b/souceCode/RSS_Front/project.config.json
@@ -14,7 +14,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
 	"appid": "wxd203f27f77d9902b",
-	"projectname": "rss_front",
+	"projectname": "RSS_Front",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
