调整页面结构，去除了discount和preference的管理界面，整合在了activity页面中

--- a/souceCode/RSS/pom.xml
+++ b/souceCode/RSS/pom.xml
@@ -49,11 +49,6 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
@@ -92,13 +87,24 @@
                 <artifactId>lombok</artifactId>
                 <version>1.18.6</version>
             </dependency>
-        </dependencies>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-devtools</artifactId>
+                <optional>true</optional>
+                <scope>true</scope>
+            </dependency>
+    </dependencies>
 
         <build>
             <plugins>
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
+
+                    <configuration>
+                        <fork>true</fork>
+                    </configuration>
                 </plugin>
             </plugins>
         </build>
