重新调整了页面结构，添加了订单确认界面(在购物车中添加完菜品之后,跳转至此界面,领取优惠卷,之后再进行支付操作)

--- a/souceCode/RSS_Front/app.json
+++ b/souceCode/RSS_Front/app.json
@@ -8,7 +8,8 @@
     "pages/mine/menu_management/menu_management",
     "pages/mine/score/score",
     "pages/mine/order_record/order_record",
-    "pages/quickService/quickService"
+    "pages/quickService/quickService",
+    "pages/cart/confirmOrder/confirmOrder"
   ],
   "window": {
     "backgroundTextStyle": "light",
