前端 完成了验证用户是否登录操作

--- a/souceCode/RSS_Front/app.json
+++ b/souceCode/RSS_Front/app.json
@@ -1,15 +1,22 @@
 {
   "pages": [
     "pages/index/index",
+
     "pages/cart/cart",
     "pages/cart/settleAccount/settleAccount",
+    "pages/cart/confirmOrder/confirmOrder",
+
     "pages/mine/mine",
     "pages/mine/consumption_statistics/consumption_statistics",
     "pages/mine/menu_management/menu_management",
     "pages/mine/score/score",
     "pages/mine/order_record/order_record",
+
     "pages/quickService/quickService",
-    "pages/cart/confirmOrder/confirmOrder"
+
+    "pages/forWaiterService/waiter",
+    "pages/login/login",
+    "pages/login/servicePersonLogin/servicePersonLogin"
   ],
   "window": {
     "backgroundTextStyle": "light",
