后端 完成服务员完成订单，改变状态的功能

--- a/souceCode/RSS/pom.xml
+++ b/souceCode/RSS/pom.xml
@@ -102,6 +102,12 @@
             <artifactId>cos_api</artifactId>
             <version>5.5.1</version>
         </dependency>
+
+        <!--Web Socket-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
         <build>
