--- a/souceCode/RSS_Front/project.config.json
+++ b/souceCode/RSS_Front/project.config.json
@@ -30,13 +30,25 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": -1,
+					"name": "1",
+					"pathName": "pages/login/login",
+					"query": "tableNum=1",
+					"scene": null
+				}
+			]
 		}
 	}
 }
